# mewo_project

./: README.md  mewo.py  pyproject.toml
.github/workflows/: docs_pages.yml  sphinx.yml
docs/: conf.py  index.rst  modules.rst  requirements.txt
docs/source/: conf.py  index.rst  mewo.rst  modules.rst  myapp.migrations.rst  myapp.rst
mewo/: manage.py
mewo/mewo/: asgi.py  settings.py  urls.py  wsgi.py
sample_project/: pyproject.toml  urls.py
sample_project/app/: models.py  tests.py  urls.py
sample_project/app/templates/myapp/: base.html  booklist.html
sample_project/docs/: contributing.rst
sample_project/docs/_build/doctrees/: contributing.doctree  environment.pickle  index.doctree  modules.doctree
sample_project/docs/_build/html/: .buildinfo  contributing.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js
sample_project/docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
sample_project/sample_project/: settings.py
src/: manage.py  pretix.cfg
src/app/: apps.py  views.py
src/app/migrations/: __init__.py
src/mewo_project/: settings.py
src/mewo_project/helpers/: logs.py
